--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,5 @@
     "baseUrl": "."
   },
   "exclude": ["node_modules"],
-  //"include": ["./src/**/*.ts"]
-  "include": ["./src/*.ts"]
+  "include": ["./src/**/*.ts"]
 }
