--- a/package.json
+++ b/package.json
@@ -11,9 +11,6 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "prisma": {
-    "schema": "src/prisma/schema.prisma"
-  },
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "@types/express": "^4.17.20",
@@ -27,5 +24,8 @@
     "@types/node": "^20.8.10",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
+  },
+  "prisma": {
+    "seed": "ts-node prisma/seed.ts"
   }
 }
