--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,9 +21,9 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
-    "baseUrl": "."
+    "baseUrl": ".",
+    "types" : ["node"]
   },
   "exclude": ["node_modules"],
-  //"include": ["./src/**/*.ts"]
-  "include": ["./src/*.ts"]
+  "include": ["./src/**/*.ts", "./prisma/seed.ts"]
 }
