Add more data to the benevole table

--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node dist/server.js",
     "build": "tsc",
-    "dev": "nodemon --exec ts-node src/server.ts"
+    "dev": "nodemon --exec ts-node src/server.ts",
+    "prisma": "[ -d prisma/migrations/ ] && rm -r prisma/migrations/ ; npx prisma migrate dev --name init",
+    "data": "ts-node prisma/benevoleData.ts"
   },
   "keywords": [],
   "author": "",
