--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,5 +25,5 @@
     "types" : ["node"]
   },
   "exclude": ["node_modules"],
-  "include": ["./src/**/*.ts", "./prisma/seed.ts"]
+  "include": ["./src/**/*.ts", "./prisma/*.ts"]
 }
