--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "dependencies": {
     "@prisma/client": "^5.5.2",
     "@types/express": "^4.17.20",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "isemail": "^3.2.0",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
