--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "isemail": "^3.2.0",
+    "jsonwebtoken": "^9.0.2",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
