--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "typescript": "^5.2.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.15",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.8.10",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
