--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/server.ts",
     "prisma": "[ -d prisma/migrations/ ] && rm -r prisma/migrations/ ; npx prisma migrate dev --name init",
-    "data": "ts-node prisma/benevoleData.ts"
+    "data": "ts-node prisma/creneauHoraireData.ts"
   },
   "keywords": [],
   "author": "",
