--- a/package.json
+++ b/package.json
@@ -18,16 +18,19 @@
     "@types/express": "^4.17.20",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "isemail": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.15",
     "@types/jsonwebtoken": "^9.0.5",
+    "@types/multer": "^1.4.11",
     "@types/node": "^20.8.10",
     "nodemon": "^3.0.1",
     "ts-node": "^10.9.1"
