--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,7 @@
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "baseUrl": ".",
-    "types" : ["node", "express"]
+    "types" : ["node"]
   },
   "exclude": ["node_modules"],
   "include": ["./src/**/*.ts", "./prisma/*.ts", "prisma/data/benevoleData.ts", "prisma/data/creneauHoraireData.ts"]
