--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@prisma/client": "^5.5.2",
+    "@prisma/client": "^5.9.1",
     "@types/express": "^4.17.20",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -24,6 +24,7 @@
     "isemail": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
+    "prisma": "^5.9.1",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
