--- a/package.json
+++ b/package.json
@@ -16,13 +16,13 @@
   "dependencies": {
     "@prisma/client": "^5.9.1",
     "@types/express": "^4.17.20",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
+    "@types/bcrypt": "^5.1.1",
+    "@types/cors": "^2.8.5",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "isemail": "^3.2.0",
-    "jsonwebtoken": "^9.0.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "prisma": "^5.9.1",
     "typescript": "^5.2.2"
