--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "isemail": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.5.2",
-    "typescript": "^5.2.2"
+    "typescript": "^5.1.3",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -35,7 +36,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.16",
-    "nodemon": "^3.0.1",
-    "ts-node": "^10.9.1"
+    "nodemon": "^3.0.1"
+    
   }
 }
