--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
-    "@prisma/client": "^5.9.1",
+    "@prisma/client": "^5.5.2",
     "@types/express": "^4.17.20",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -26,9 +26,9 @@
     "express": "^4.18.2",
     "isemail": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
-    "prisma": "^5.9.1",
-    "typescript": "^5.1.3",
-    "ts-node": "^10.9.1"
+    "prisma": "^5.5.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -37,6 +37,5 @@
     "@types/multer": "^1.4.11",
     "@types/node": "^20.11.16",
     "nodemon": "^3.0.1"
-    
   }
 }
