--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/src/server.js",
     "build": "tsc",
     "dev": "nodemon --exec ts-node src/server.ts",
-    "prisma": "npx prisma migrate prod --name init",
+    "prisma": "npx prisma migrate dev --name init",
     "data": "ts-node prisma/creneauHoraireData.ts"
   },
   "keywords": [],
@@ -27,8 +27,8 @@
     "isemail": "^3.2.0",
     "jsonwebtoken": "^9.0.2",
     "prisma": "^5.5.2",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
